Fix spacing between sections

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -3315,8 +3315,8 @@ a .link-hover:hover {
   margin-top: 10px;
 }
 .shopify-section {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 .carousel {
   overflow: hidden;
